# ml-implementations

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: deploy-new-version.yml
demos/: test_gaussian_naive_bayes.py  test_knn.py  test_multinomial_naive_bayes.py
docker/: Dockerfile.server
linear_regression/: linear.py
logistic_regression/: logistic_regression.py  test_logistic_regression.py
ml_serving/flaskr/: __init__.py  api.py  model_directory.py  schemas.py  utils.py
ml_serving/flaskr/models/: __init__.py  gaussian_naive_bayes.py  kmeans.py  knn.py  linear_regression.py  logistic_regression.py  model_base_classes.py  multinomial_naive_bayes.py  perceptron.py  svm.py
ml_serving/flaskr/routes/: __init__.py  health.py  model.py  nonparametric.py  parametric.py
ml_serving/linear_regression/: test_linear.py
ml_serving/models/: __init__.py  model_base_classes.py
ml_serving/models/kmeans/: test_kmeans.py
ml_serving/models/knn/: test_knn.py
ml_serving/naive_bayes/gaussian/: naive_bayes.py
ml_serving/perceptron/: perceptron.py
models/kmeans/: kmeans.py
models/knn/: knn.py
naive_bayes/: naive_bayes.py  test_naive_bayes.py
naive_bayes/multinomial/: test_naive_bayes.py
svm/: svm.py  test_svm.py
terraform/: main.tf  terraform.tfvars  variables.tf
tests/: sample_requests.txt  test_gaussian_naive_bayes.py  test_kmeans.py  test_knn.py  test_linear_regression.py  test_logistic_regression.py  test_multinomial_naive_bayes.py  test_perceptron.py  test_svm.py
(+13 files in other folders)
